[gd_scene load_steps=15 format=3 uid="uid://dqq4w7fimk4gi"]

[ext_resource type="Script" uid="uid://blrxjmmfj02y3" path="res://scripts/Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cicry5qh3vind" path="res://assets/sprites/player/strawberry/strawberry_cannonball.png" id="2_7oing"]
[ext_resource type="Texture2D" uid="uid://ci3e3idcrf8q1" path="res://assets/sprites/player/strawberry/strawberry_idle.png" id="2_tpg5x"]
[ext_resource type="Texture2D" uid="uid://dap2fhcv7rm4q" path="res://assets/sprites/player/strawberry/strawberry_charge.png" id="2_v42im"]
[ext_resource type="Texture2D" uid="uid://b53omdctpnvof" path="res://assets/sprites/player/strawberry/strawberry_flap.png" id="3_c3xxp"]
[ext_resource type="Texture2D" uid="uid://yaojhy8atwxi" path="res://assets/sprites/player/strawberry/strawberry_air_punch.png" id="3_pn6s4"]
[ext_resource type="Texture2D" uid="uid://1tmvnaamicdp" path="res://assets/sprites/player/strawberry/strawberry_soar.png" id="4_c3xxp"]
[ext_resource type="Texture2D" uid="uid://b0waad5pljabm" path="res://assets/sprites/player/strawberry/strawberry_walk0.png" id="4_npwbq"]
[ext_resource type="Texture2D" uid="uid://bffomkuwfq82j" path="res://assets/sprites/player/strawberry/strawberry_punch.png" id="5_npwbq"]
[ext_resource type="Texture2D" uid="uid://hix01l3vvjp6" path="res://assets/sprites/player/strawberry/strawberry_walk1.png" id="5_v42im"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q3lat"]
radius = 60.0
height = 140.0

[sub_resource type="AtlasTexture" id="AtlasTexture_pn6s4"]
atlas = ExtResource("2_tpg5x")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_6ysni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7oing")
}],
"loop": false,
"name": &"air_down_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v42im")
}],
"loop": false,
"name": &"air_neutral_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_pn6s4")
}],
"loop": false,
"name": &"air_up_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn6s4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_c3xxp")
}, {
"duration": 1.0,
"texture": ExtResource("4_c3xxp")
}],
"loop": true,
"name": &"jump_hold",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_c3xxp")
}],
"loop": true,
"name": &"jump_release",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_npwbq")
}],
"loop": false,
"name": &"neutral_attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_npwbq")
}, {
"duration": 1.0,
"texture": ExtResource("5_v42im")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tok1r"]
radius = 75.0
height = 150.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_q3lat")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_6ysni")
animation = &"air_down_attack"

[node name="OverlapArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="OverlapArea"]
shape = SubResource("CapsuleShape2D_tok1r")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_AnimatedSprite2D_animation_finished"]
[connection signal="body_entered" from="OverlapArea" to="." method="_on_OverlapArea_body_entered"]
[connection signal="body_exited" from="OverlapArea" to="." method="_on_OverlapArea_body_exited"]
